Avoid moving off-screen coins, tweak layering, work around inconsistent vh unit on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,14 +14,6 @@ body:before, body:after {
     transition-delay: 1s;
 }
 
-body:before {
-    background: #1e5799;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 9000;
-}
-
 body:after, .day, .credits, .keys {
     content: 'lost';
     font-size: 2vw;
@@ -33,6 +25,19 @@ body:after, .day, .credits, .keys {
     top: 50%;
     transform: translateY(-50%);
     z-index: 9001;
+}
+
+body:before {
+    background: #1e5799;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 9002;
+}
+
+.credits,
+body:after {
+    z-index: 9003;
 }
 
 body.loaded:after, body.loaded:before {
@@ -90,7 +95,6 @@ html, body {
 }
 
 .keys {
-    z-index: 100;
     font-size: 3vw;
 }
 
